2008-08-02  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackendtrash.c: Don't include internal mounts
	while building up the list of trash directories. Bug #525779
	Patcg from A. Walton  <awalton@svn.gnome.org>

2008-08-02  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: (parse_xml): Free the xml doc in
	error cases. Plug the leaks, fix bug #545968, thanks to
	Christian Persch <chpe@gnome.org> again!

2008-08-02  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:
	Use XML_PARSE_NONET with xmlReadMemory when parsing the webdav
	responses to disallow net access of the parser. Bug #545966
	Patch by Christian Persch <chpe@gnome.org>

2008-08-02  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackendtrash.c: (list_trash_dirs):
	Create the home trash directory if it doesn't already exist,
	so that we can monitor it for changes. Part two of bug #509740; 
	Patch by Hans Petter Jansson <hpj@novell.com>

2008-08-02  Christian Kellner  <gicmo@gnome.org>

	* autogen.sh: Allow libtool 2.2.

2008-08-02  Christian Persch <chpe@gnome.org>

        * ChangeLog
        * client/gdaemonfile.c
        * client/gdaemonfileinputstream.c
        * client/gdaemonfileoutputstream.c
        * client/gvfsdaemondbus.c
        * common/gdbusutils.c
        * common/gvfsdaemonprotocol.c
        * daemon/gvfsbackendarchive.c
        * daemon/gvfsbackendcdda.c
        * daemon/gvfsbackenddav.c
        * daemon/gvfsbackendftp.c
        * daemon/gvfsbackendgphoto2.c
        * daemon/gvfsbackendobexftp-cap-parser.c
        * daemon/gvfsbackendobexftp-fl-parser.c
        * daemon/gvfsbackendobexftp.c
        * daemon/gvfsbackendsftp.c
        * daemon/gvfsbackendsmb.c
        * daemon/gvfsbackendsmbbrowse.c
        * daemon/gvfsjob.c
        * daemon/gvfsjobopenforwrite.c
        * daemon/gvfsreadchannel.c
        * daemon/gvfswritechannel.c
        * daemon/mount.c
        * daemon/soup-input-stream.c